--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "supertest": "^3.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "mochawesome": "^2.3.1",
     "nodemon": "^1.8.1"
   }
 }
