--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
+    "koa2-cors": "^2.0.5",
     "leancloud-storage": "^3.3.1",
     "mocha": "^4.0.1",
     "moment": "^2.19.1",
